--- a/depics/css/layoutNew.css
+++ b/depics/css/layoutNew.css
@@ -104,7 +104,7 @@ a:visited {
 }
 
 h2.repoDescriptionHeader {
-	text-align: center;
+	text-align: center
 	padding-right: 15px;
 	display: inline;height: 110px;
 	width: 55px;
