--- a/hobby/plants/depics/css/layoutNew.css
+++ b/hobby/plants/depics/css/layoutNew.css
@@ -3,6 +3,7 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: #d1d1d1;
+    font-size:100%;
 }
 
 a:link {
@@ -45,12 +46,12 @@ a:visited {
     }
 
 #contentSingleTop {
-	padding: 10px;
 	margin-left: 0px;
 	margin-top: 0px;
 	border-top: 0.5px solid #c4c4c6 !important;
     border-bottom: 0.5px solid #c4c4c6 !important;
     background-color: #fff !important;
+    height:auto;
 }
 
 #contentSingleYellow {
@@ -79,7 +80,7 @@ a:visited {
 
 #contentTop {
 	padding: 0px;
-	margin-left: px;
+	margin-left: 0px;
 	margin-top: 10px;
     border-top: 0.5px solid #c4c4c6 !important;
     background-color: #fff !important;
@@ -106,8 +107,9 @@ a:visited {
 h2.repoDescriptionHeader {
 	text-align: left;
     display: inline-table;
-	font-size: 35px;
+	font-size: 280%;
 	vertical-align: middle;
+	margin:0px;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 }
 
@@ -120,7 +122,7 @@ h2.repoScreenshotsHeader {
 
 h3.textHeaderLabel {
 	font-size: 17px;
-	font-weight: 400px;
+	font-weight: 40px;
 	text-align: center;
 	margin-top: 0px;
 	display:inline;
@@ -135,6 +137,7 @@ img.repoDescription{
 	height: 58px;
 	width: 58px;
 	vertical-align:center;
+	display: inline-table;
 }
 
 img.repoScreenshots{
@@ -144,12 +147,15 @@ img.repoScreenshots{
 }
 
 img.croppedImage{
-	margin: 5px;
-	height: 100px;
-	width: 100px;
+	height: 20%;
+	width: 20%;
+	margin-left: 10px;
 	vertical-align: middle;
 	-webkit-clip-path: circle(50%);
-  clip-path: circle(50%);
+  	clip-path: circle(50%);
+  	margin-top:15px;
+  	margin-bottom: 15px;
+  	margin-right: 15px;
 
 
 }
@@ -157,7 +163,6 @@ img.croppedImage{
 ul,li { 
 	list-style-type: none;
 	list-style-position:inside;
-	margin:0;
 	padding:0; 
 }
 
