--- a/hobby/plants/depics/css/layoutNew.css
+++ b/hobby/plants/depics/css/layoutNew.css
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: #d1d1d1;
-    font-size:100%;
+    font-size:;
 }
 
 a:link {
@@ -147,8 +147,8 @@ img.repoScreenshots{
 }
 
 img.croppedImage{
-	height: 15%;
-	width: 15%;
+	height: 120px;
+	width: 120px;
 	margin-left: 10px;
 	vertical-align: middle;
 	-webkit-clip-path: circle(50%);
