--- a/hobby/plants/depics/css/layoutNew.css
+++ b/hobby/plants/depics/css/layoutNew.css
@@ -50,7 +50,7 @@ a:visited {
 	border-top: 0.5px solid #c4c4c6 !important;
     border-bottom: 0.5px solid #c4c4c6 !important;
     background-color: #fff !important;
-    height:auto;
+
 }
 
 #contentSingleYellow {
@@ -106,10 +106,10 @@ a:visited {
 h2.repoDescriptionHeader {
 	text-align: left;
     display: inline-table;
-	font-size: 300%;
+	font-size: 275%;
 	vertical-align: middle;
-	margin-bottom:25px;
-	margin-top: 25px;
+	margin: 0px;
+	height: 18%;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 }
 
@@ -149,13 +149,13 @@ img.repoScreenshots{
 img.croppedImage{
 	height: 22%;
 	width: 22%;
-	margin-left: 10px;
 	vertical-align: middle;
 	-webkit-clip-path: circle(50%);
   	clip-path: circle(50%);
-  	margin-top:20px;
-  	margin-bottom: 20px;
-  	margin-right: 15px;
+  	margin-top: 4%;
+  	margin-bottom: 4%;
+  	margin-right: 2%;
+  	margin-left: 2%;
 
 
 }
