--- a/hobby/plants/depics/css/layoutNew.css
+++ b/hobby/plants/depics/css/layoutNew.css
@@ -154,6 +154,7 @@ img.croppedImage{
 	-webkit-clip-path: circle(50%);
   	clip-path: circle(50%);
 	-ms-clip-path: circle(50%);
+	-o-clip-path: circle(50%);
   	margin:2%;
   	margin-top: 2.5%;
   	margin-bottom: 2.5%;
