--- a/ck/depics/css/layoutNew.css
+++ b/ck/depics/css/layoutNew.css
@@ -59,6 +59,7 @@ a:visited {
 	border-top: 0.5px solid #c4c4c6 !important;
     border-bottom: 0.5px solid #c4c4c6 !important;
     background-color: #1ee67d !important;
+    display: inline;
 }
 
 #contentBottom {
@@ -153,6 +154,7 @@ img.croppedImage{
   	clip-path: circle(50%);
 	-ms-clip-path: circle(50%);
 	-o-clip-path: circle(50%);
+	margin-top: 5px;
 
 /*
   	margin:2%;
