--- a/ck/depics/css/layoutNew.css
+++ b/ck/depics/css/layoutNew.css
@@ -59,7 +59,6 @@ a:visited {
 	border-top: 0.5px solid #c4c4c6 !important;
     border-bottom: 0.5px solid #c4c4c6 !important;
     background-color: #1ee67d !important;
-    display: inline;
 }
 
 #contentBottom {
@@ -134,8 +133,7 @@ hr { display: block; height: 0.5px;
     margin: 1em 0; padding: 0; }
 
 img.repoDescription{
-	height: 58px;
-	width: 58px;
+	width: 44%;
 	vertical-align:center;
 	/*
 	display: inline-table;
@@ -154,16 +152,14 @@ img.croppedImage{
   	clip-path: circle(50%);
 	-ms-clip-path: circle(50%);
 	-o-clip-path: circle(50%);
-	margin-top: 5px;
 
-/*
+
   	margin:2%;
-  	margin-top: 2.5%;
-  	margin-bottom: 2.5%;
-  	height: 175px;
-  	width: px;
+  	width:44%;
+  	margin-top: 3%;
+  	margin-bottom: 3%;
   	display: inline-table;
-*/
+
 }
 
 ul,li { 
