--- a/ck/depics/css/layoutNew.css
+++ b/ck/depics/css/layoutNew.css
@@ -106,9 +106,9 @@ h2.repoDescriptionHeader {
 	text-align: left;
     display: inline-table;
 	vertical-align: middle;
-	line-height: 130%;
+	width: 47%;
 	font-size:50px;
-	margin:0px;
+	margin: 0%;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 }
 
@@ -133,7 +133,6 @@ hr { display: block; height: 0.5px;
     margin: 1em 0; padding: 0; }
 
 img.repoDescription{
-	width: 40%;
 	vertical-align:center;
 }
 
@@ -149,12 +148,13 @@ img.croppedImage{
   	clip-path: circle(50%);
 	-ms-clip-path: circle(50%);
 	-o-clip-path: circle(50%);
+	max-height: 145px;
+	max-width: 145px;
 
-
-  	margin:2%;
-  	width:40%;
-  	margin-top: 3%;
-  	margin-bottom: 3%;
+  	margin:3%;
+  	width:47%;
+  	margin-top: 2.5%;
+  	margin-bottom: 2.5%;
   	display: inline-table;
 
 }
