--- a/ck/depics/css/layoutNew.css
+++ b/ck/depics/css/layoutNew.css
@@ -45,11 +45,11 @@ a:visited {
     }
 
 #contentSingleTop {
-	margin-left: 0px;
-	margin-top: 0px;
 	border-top: 0.5px solid #c4c4c6 !important;
     border-bottom: 0.5px solid #c4c4c6 !important;
     background-color: #fff !important;
+    width: 100%;
+    padding: 10px;
 }
 
 #contentSingleYellow {
@@ -109,6 +109,7 @@ h2.repoDescriptionHeader {
 	width: 40%;
 	font-size:50px;
 	margin: 0%;
+	padding: 15px;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 }
 
@@ -150,11 +151,9 @@ img.croppedImage{
 	-o-clip-path: circle(50%);
 	max-height: 145px;
 	max-width: 145px;
-
-  	margin:3%;
   	width:40%;
-  	margin-top: 2.5%;
-  	margin-bottom: 2.5%;
+  	margin-top: 15px;
+  	margin-bottom: 15px;
   	display: inline-table;
 
 }
