--- a/carltons-karoo/depics/css/layoutNew.css
+++ b/carltons-karoo/depics/css/layoutNew.css
@@ -146,6 +146,14 @@ img.repoScreenshots{
 	vertical-align:middle;
 }
 
+img.image{
+	vertical-align: middle;
+	max-height: 130px;
+	max-width: 130px;
+  	margin: 15px;
+  	margin-left: 10px;
+  }
+
 img.croppedImage{
 	vertical-align: middle;
 	
@@ -155,8 +163,8 @@ img.croppedImage{
 	-o-clip-path: circle(50%);
 	
 
-	max-height: 145px;
-	max-width: 145px;
+	max-height: 130px;
+	max-width: 130px;
   	margin: 12.5px;
   	margin-left: 10px;
 
