--- a/carltons-karoo/depics/css/layoutNew.css
+++ b/carltons-karoo/depics/css/layoutNew.css
@@ -105,10 +105,10 @@ a:visited {
 h2.repoDescriptionHeader {
 	text-align: left;
 	vertical-align: middle;
-	font-size: 40px;
-	margin: 0px;
-	padding: 15px;
+	font-size: auto;
+	width: 250px;
 	display: inline-block;
+    padding-left: 10px;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 }
 
@@ -148,8 +148,8 @@ img.repoScreenshots{
 
 img.image{
 	vertical-align: middle;
-	max-height: 130px;
-	max-width: 130px;
+	max-height: 120px;
+	max-width: 120px;
   	margin: 15px;
   	margin-left: 10px;
   }
@@ -162,11 +162,11 @@ img.croppedImage{
 	-ms-clip-path: circle(50%);
 	-o-clip-path: circle(50%);
 	
-
-	max-height: 130px;
-	max-width: 130px;
-  	margin: 12.5px;
-  	margin-left: 10px;
+	
+	max-width: 120px;
+	max-height: 120px;
+  	margin-top:5px;
+  	margin-bottom:5px;
 
 }
 
@@ -179,3 +179,67 @@ ul,li {
 li.buttons {
 	 border: 1px solid black;
 }
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+
+span.right{
+	position: fixed;
+	right: 15px;
+	vertical-align: middle;
+	line-height: 120px;
+	
+}
+
+
+.overlay {
+	display:inline;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
