--- a/depics/css/layoutNew.css
+++ b/depics/css/layoutNew.css
@@ -44,13 +44,12 @@ a:visited {
     background-color: #fff !important;
     }
 
+
 #contentSingleTop {
-	padding: 10px;
-	margin-left: 0px;
-	margin-top: 0px;
 	border-top: 0.5px solid #c4c4c6 !important;
     border-bottom: 0.5px solid #c4c4c6 !important;
     background-color: #fff !important;
+    padding: 10px;
 }
 
 #contentSingleYellow {
@@ -79,7 +78,7 @@ a:visited {
 
 #contentTop {
 	padding: 0px;
-	margin-left: px;
+	margin-left: 0px;
 	margin-top: 10px;
     border-top: 0.5px solid #c4c4c6 !important;
     background-color: #fff !important;
@@ -104,13 +103,17 @@ a:visited {
 }
 
 h2.repoDescriptionHeader {
-	text-align: center
-	padding-right: 15px;
-	display: inline;height: 110px;
-	width: 55px;
-	font-size: 55px;
-	vertical-align:middle;
+	text-align: left;
+	padding-top:15px;
+    position: absolute;
+	font-size: auto;
+	width: 170px;
+
+	display: inline-block;
+    padding-left: 10px;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+}
+
 }
 
 h2.repoScreenshotsHeader {
@@ -122,21 +125,21 @@ h2.repoScreenshotsHeader {
 
 h3.textHeaderLabel {
 	font-size: 17px;
-	font-weight: 400px;
+	font-weight: 40px;
 	text-align: center;
-	display: inline;
 	margin-top: 0px;
+	display:inline;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 }
+
+
 
 hr { display: block; height: 0.5px;
     border: 0; border-top: 0.5px solid #c4c4c6 !important;;
     margin: 1em 0; padding: 0; }
 
 img.repoDescription{
-	height: 58px;
-	width: 58px;
-	vertical-align:middle;
+	vertical-align:center;
 }
 
 img.repoScreenshots{
@@ -145,23 +148,100 @@ img.repoScreenshots{
 	vertical-align:middle;
 }
 
+img.image{
+	vertical-align: middle;
+	max-height: 120px;
+	max-width: 120px;
+  	margin: 15px;
+  	margin-left: 10px;
+  }
+
 img.croppedImage{
-	margin: 5px;
-	height: 100px;
-	width: 100px;
-	vertical-align:middle;
+	vertical-align: middle;
+	
 	-webkit-clip-path: circle(50%);
-  clip-path: circle(50%);
+  	clip-path: circle(50%);
+	-ms-clip-path: circle(50%);
+	-o-clip-path: circle(50%);
+	
+	
+	max-width: 125px;
+	max-height: 125px;
+  	margin-top:5px;
+    position:
+  	margin-bottom:5px;
 
 }
 
 ul,li { 
 	list-style-type: none;
 	list-style-position:inside;
-	margin:0;
 	padding:0; 
 }
 
 li.buttons {
 	 border: 1px solid black;
 }
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+
+span.right{
+	position: absolute;
+	right: 15px;
+	vertical-align: middle;
+	line-height: 120px;
+	
+}
+
+
+.overlay {
+	display:inline;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: white;
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 12px;
+    text-decoration: none;
+    font-size: 36px;
+    color: black;
+    display: block;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #727272;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 25px;
+    right: 5px;
+    font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
