--- a/depics/css/layoutNew.css
+++ b/depics/css/layoutNew.css
@@ -158,6 +158,12 @@ img.croppedImage{
     height:125px;
 }
 
+img.image{
+    vertical-align: middle;
+    margin-top:10px;
+    margin-bottom:10px;
+    height:125px;
+
 ul,li { 
 	list-style-type: none;
 	list-style-position:inside;
